infra/overlays/prod/mongo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-ingress
  namespace: mongo
  annotations:
    cert-manager.io/cluster-issuer: $(CLUSTER_ISSUER)
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - $(MONGO_EXPRESS_HOST)
    secretName: mongo-tls
  rules:
  - host: $(MONGO_EXPRESS_HOST)
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mongo-express-service
            port:
              number: 8092
